<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.view.activities.MainActivity">

    <data/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/my_font"
            android:text="@string/series"
            android:textColor="@color/primary_color"
            android:textSize="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:drawableRight="@drawable/ic_arrow"
            android:drawableTint="@color/primary_color"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSpinner"
            app:layout_constraintStart_toStartOf="@+id/tvSpinner">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvPopularSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/popular"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvPopularSeries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopularSeries"
                    app:layout_constraintStart_toStartOf="@+id/tvPopularSeries"
                    android:layout_marginHorizontal="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/tvTopRatedSeries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/top_rated"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/rvPopularSeries"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTopRatedSeries"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTopRatedSeries"
                    app:layout_constraintStart_toStartOf="@+id/tvTopRatedSeries"
                    android:layout_marginHorizontal="@dimen/_10sdp"/>

                <TextView
                    android:id="@+id/tvAiringToday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/my_font"
                    android:text="@string/airing_today"
                    android:textSize="@dimen/_20sdp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@+id/rvTopRatedSeries"
                    app:layout_constraintStart_toStartOf="parent"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvAiringToday"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvAiringToday"
                    app:layout_constraintStart_toStartOf="@+id/tvAiringToday"
                    android:layout_marginHorizontal="@dimen/_10sdp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>