<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="adapter"
            type="com.hectorpolendo.examen.ui.view.adapters.VideosAdapter" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.view.activities.InfoActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_400sdp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/ivMovie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"/>

                <androidx.appcompat.widget.Toolbar
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin"/>
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fbFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            app:backgroundTint="@color/white"
            app:tint="@color/accent"
            app:layout_anchor="@id/appBar"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_anchorGravity="bottom|end" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTitleDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:fontFamily="@font/my_font"
                            android:text="@string/date"/>

                        <TextView
                            android:id="@+id/tvDate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/accent"
                            android:fontFamily="@font/my_font"
                            android:layout_marginLeft="@dimen/_10sdp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTitleScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:fontFamily="@font/my_font"
                            android:text="@string/score"/>

                        <TextView
                            android:id="@+id/tvScore"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/accent"
                            android:fontFamily="@font/my_font"
                            android:layout_marginLeft="@dimen/_10sdp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tvTitleLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:fontFamily="@font/my_font"
                            android:text="@string/language"/>

                        <TextView
                            android:id="@+id/tvLanguage"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textColor="@color/accent"
                            android:fontFamily="@font/my_font"
                            android:layout_marginLeft="@dimen/_10sdp"/>
                    </LinearLayout>
                </LinearLayout>


                <TextView
                    android:id="@+id/tvGenres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:fontFamily="@font/my_font"
                    android:text="@string/genres"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@id/linearInfo"
                    app:layout_constraintStart_toStartOf="@id/linearInfo"/>

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cpGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintTop_toBottomOf="@+id/tvGenres"
                    app:layout_constraintStart_toStartOf="@+id/tvGenres">

                </com.google.android.material.chip.ChipGroup>

                <TextView
                    android:id="@+id/tvOverview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/sub_text"
                    android:fontFamily="@font/my_font"
                    android:textSize="@dimen/_10sdp"
                    app:layout_constraintTop_toBottomOf="@id/cpGroup"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/tvTrailers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trailers"
                    android:fontFamily="@font/my_font"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/tvOverview"
                    app:layout_constraintStart_toStartOf="@+id/tvOverview"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTrailers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tvTrailers"
                    app:layout_constraintStart_toStartOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            app:layout_anchor="@id/appBar"
            app:layout_anchorGravity="bottom"/>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>